...
                                <rect key="frame" x="20" y="825.66666666666663" width="388" height="46.333333333333371"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UCG-L8-fgp">
                                        <rect key="frame" x="0.0" y="0.0" width="354" height="46.333333333333336"/>
                                        <color key="tintColor" systemColor="systemRedColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Get Started">
                                            <fontDescription key="titleFontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
                                            <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
                                        </buttonConfiguration>
                                        <connections>
                                            <action selector="StartBtn:" destination="AEc-rh-TxN" eventType="touchUpInside" id="9Oy-ID-wdJ"/>
                                        </connections>
...
                                    <constraint firstAttribute="width" secondItem="Yw4-mR-lai" secondAttribute="height" multiplier="1:1" id="KnY-Hv-iax"/>
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="3fj-zQ-TdW">
                                <rect key="frame" x="114.66666666666669" y="60" width="199" height="34.333333333333343"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="User:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="drX-pg-Okh">
                                        <rect key="frame" x="0.0" y="0.0" width="59.666666666666664" height="34.333333333333336"/>
                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="25"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Active User" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="prP-Ne-vKZ">
...
